# build

./: .gitignore  .licenserc.yaml  BUILDCONFIG.gn  README.md  default_targets.gni  sysroot.gni
boards/: gd32e507_eval.gni  gd32vw553_eval.gni  none.gni  qemu_mps2_an385.gni  qemu_mps3_an547.gni  qemu_riscv32.gni  qemu_riscv64.gni  qemu_virt64_aarch64.gni  raspberry_pico2_cortexm.gni  rk3568.gni  seeed_xiao_esp32c3.gni
boards/esp32c3/: BUILD.gn
boards/gd32e507_eval/: BUILD.gn
boards/gd32vw553_eval/: BUILD.gn
boards/none/: BUILD.gn
boards/qemu_mps2_an385/: BUILD.gn
boards/qemu_mps3_an547/: BUILD.gn
boards/qemu_riscv32/: BUILD.gn
boards/qemu_riscv64/: BUILD.gn
boards/qemu_virt64_aarch64/: BUILD.gn
boards/raspberry_pico2_cortexm/: BUILD.gn
boards/rk3568/: BUILD.gn
boards/seed_xiao_esp32c3/: BUILD.gn
boards/seeed_xiao_esp32c3/: BUILD.gn
ci/: run_check_fmt.py  run_check_license.py  run_ci.py
config/: BUILD.gn  clippy.gni  rust_config.gni
scripts/: action_helpers.py  gen_coverage_report.py  gen_esp32_image.py  gen_esp32_qemu_runner.py  gen_linux_emulation_runner.py  gen_probe_runner.py  gen_qemu_runner.py  get_sysroot.py  merge_coverage_reports.py  preprocess_linker_script.py  reload_autoconf.py  reload_autoconf_and_build.py  run_bindgen.py  run_build_script.py  run_cbindgen.py  run_clippy.py  run_cmd.py
scripts/miri/: run_miri.py
scripts/qemu_checker/: qemu_checker.py  qemu_checker_test.sh  qemu_checker_test_fail.txt
templates/: bindgen.gni  board.gni  build_app.gni  build_kernel.gni  build_template.gni  cargo_crate.gni  cbindgen.gni  clippy.gni  generate_linker.gni  linker_script.gni  miri.gni  reload_autoconf.gni  reload_autoconf_and_build.gni  rust.gni  set_configuration_files.gni
tests/: BUILD.gn
tests/test_c_dylib/: BUILD.gn  foo.c
tests/test_c_exe/: BUILD.gn  foo.c
tests/test_c_staticlib/: BUILD.gn
tests/test_rust_bin_link_cxx_staticlib/: BUILD.gn
tests/test_rust_bin_link_cxx_staticlib/src/: foo.cc  foo.rs
tests/test_rust_bin_link_rlib/: BUILD.gn
tests/test_rust_bin_link_rlib/bar/src/: bar.rs
tests/test_rust_bin_link_rlib/foo/src/: foo.rs
tests/test_rust_cdylib/: BUILD.gn
tests/test_rust_cdylib/src/: lib.rs
tests/test_rust_dylib/: BUILD.gn
toolchain/: BUILD.gn  blueos.gni  cflags.gni  rustflags.gni
toplevel/: .gn  BUILD.gn
