# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (coverage || profile) {
  check_all_on_virtual_board = [
    "//kernel/adapter:check_adapter",
    "//kernel/kernel:check_kernel",
    "//kernel/rsrt:check_rsrt",
    "//librs:check_librs",
  ]
  clippy_all_on_virtual_board = []
} else {
  check_all_on_virtual_board = [
    "//apps/shell:shell",
    "//kernel/adapter:check_adapter",
    "//kernel/kernel:check_kernel",
    "//kernel/loader:check_loader",
    "//kernel/rsrt:check_rsrt",
    "//librs:check_librs",
  ]
  clippy_all_on_virtual_board = [
    "//kernel/kernel:check_kernel_by_clippy",
    "//librs:check_librs_by_clippy",
    "//kernel/adapter:check_adapter_by_clippy",
    "//kernel/loader:check_loader_by_clippy",
    "//kernel/rsrt:check_rsrt_by_clippy",
  ]
}
