# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (current_toolchain == "//build/toolchain:blueos_thumbv7m" ||
    current_toolchain == "//build/toolchain:blueos_thumbv8m") {
  current_sysroot = exec_script("//build/scripts/get_sysroot.py",
                                [ "arm-none-eabi-gcc" ],
                                "string")
} else if (current_toolchain == "//build/toolchain:blueos_riscv32imc" ||
           current_toolchain == "//build/toolchain:blueos_riscv32imac") {
  current_sysroot = exec_script("//build/scripts/get_sysroot.py",
                                [ "riscv-none-elf-gcc" ],
                                "string")
}
