# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  chip = "gd32e5x"
  use_defmt = false
  use_defmt_test = false
}

board_default_toolchain = "//build/toolchain:blueos_thumbv8m"
qemu_exe = ""
machine = ""
qemu_extra_args = []
qemu_net_args = []
qemu_block_args = []
board_deps = [ "//external/vendor/cortex-m-0.7.7:cortex_m" ]

if (use_defmt) {
  board_deps += [
    "//external/vendor/defmt/v1.0.1:defmt",
    "//external/vendor/defmt_rtt/v1.0.0:defmt_rtt",
  ]
}

if (use_defmt_test) {
  board_deps += [ "//external/defmt_test/v0.4.0:defmt_test" ]
}
