# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

board_default_toolchain = "//build/toolchain:blueos_thumbv7m"
qemu_exe = "qemu-system-arm"
machine = "mps2-an385"
rust_abi_target = "thumbv7m-none-eabi"
qemu_extra_args = []
qemu_net_args = []
qemu_block_args = []
board_deps = [
  "//external/vendor/cortex-m-0.7.7:cortex_m",
  "//external/vendor/smoltcp-0.12.0:smoltcp",
]
