# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

board_default_toolchain = "//build/toolchain:blueos_aarch64"
qemu_exe = "qemu-system-aarch64"
machine = "virt,virtualization=on,gic-version=3"
rust_abi_target = "aarch64-unknown-none"
qemu_extra_args = [
  "-cpu",
  "cortex-a53",
  "-smp",
  "8",
  "-chardev",
  "stdio,id=con,mux=on",
  "-serial",
  "chardev:con",
  "-global",
  "virtio-mmio.force-legacy=false",
  "-device",
  "virtio-rng-device,bus=virtio-mmio-bus.1",
  "-mon",
  "chardev=con,mode=readline",
]
qemu_net_args = [
  "-netdev",
  "user,id=u1,hostfwd=tcp:127.0.0.1:10024-10.0.2.15:23,hostfwd=tcp:127.0.0.1:15002-10.0.2.15:5001",
  "-device",
  "virtio-net-device,netdev=u1,bus=virtio-mmio-bus.2",
]
qemu_block_args = [
  "-device",
  "virtio-blk-device,bus=virtio-mmio-bus.3,drive=hd",
]
board_deps = [
  "//external/vendor/arm-gic-0.4.0:arm_gic",
  "//external/vendor/flat_device_tree-3.1.1:flat_device_tree",
  "//external/vendor/semihosting-0.1.20:semihosting",
  "//external/vendor/smoltcp-0.12.0:smoltcp",
  "//external/vendor/unwinding-0.2.4:unwinding",
  "//external/vendor/virtio-drivers-0.11.0:virtio_drivers",
]
