# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  chip = "rp2350"
  use_defmt = false
  use_defmt_test = false
}

board_default_toolchain = "//build/toolchain:blueos_thumbv8m"
qemu_exe = ""
machine = ""
rust_abi_target = "thumbv8m.main-none-eabihf"
qemu_extra_args = []
qemu_net_args = []
qemu_block_args = []
board_deps = [
  "//build/boards/${board}:default_linker_script",
  "//external/vendor/cortex-m-0.7.7:cortex_m",
  "//external/vendor/embedded-hal-1.0.0:embedded_hal",
  "//external/vendor/smoltcp-0.12.0:smoltcp",
]

if (use_defmt) {
  board_deps += [
    "//external/vendor/defmt-1.0.1:defmt",
    "//external/vendor/defmt-rtt-1.1.0:defmt_rtt",
  ]
}

if (use_defmt_test) {
  board_deps += [ "//external/vendor/defmt-test-0.4.0:defmt_test" ]
}
