# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

board_default_toolchain = "//build/toolchain:blueos_aarch64"
qemu_exe = ""
machine = ""
rust_abi_target = "aarch64-unknown-none"
qemu_extra_args = []
qemu_net_args = []
qemu_block_args = []
board_deps = [
  "//external/vendor/arm-gic-0.4.0:arm_gic",
  "//external/vendor/flat_device_tree-3.1.1:flat_device_tree",
  "//external/vendor/smoltcp-0.12.0:smoltcp",
  "//external/vendor/virtio-drivers-0.11.0:virtio_drivers",
]
