# Copyright (c) 2026 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  chip = "esp32c3"
}

board_default_toolchain = "//build/toolchain:blueos_riscv32imc"
qemu_exe = "qemu-system-riscv32"
machine = "esp32c3"
rust_abi_target = "riscv32"
qemu_extra_args = []
qemu_block_interface = "mtd"
qemu_net_args = []
qemu_block_args = []
qemu_esp32_bootloader_bin = "https://github.com/xuchang-vivo/build/releases/download/assert/bootloader.bin"
qemu_esp32_partition_table_bin = "https://github.com/xuchang-vivo/build/releases/download/assert/partition-table.bin"
qemu_use_esp32_loader = true
board_deps = []
