# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

_clippy_lint_flags = [
  "-A",
  "clippy::missing_safety_doc",
  "-A",
  "clippy::mut_from_ref",
  "-A",
  "clippy::not_unsafe_ptr_arg_deref",
  "-A",
  "clippy::too_many_arguments",
  "-A",
  "clippy::new_without_default",
  "-A",
  "clippy::non_minimal_cfg",
  "-A",
  "clippy::unnecessary_cast",
  "-A",
  "clippy::arc_with_non_send_sync",
]

clippy_lint_flags = string_join(" ", _clippy_lint_flags)

_rustc_lint_flags = [
  "-D",
  "warnings",
  "-A",
  "unused",
  "-A",
  "dead_code",
  "-A",
  "static_mut_refs",
]
rustc_lint_flags = string_join(" ", _rustc_lint_flags)
