# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

template("bindgen") {
  _crate_name = target_name
  if (defined(invoker.crate_name)) {
    _crate_name = invoker.crate_name
  }

  action(_crate_name) {
    forward_variables_from(invoker, "*", [ "crate_name" ])
    script = "//build/scripts/run_bindgen.py"
    output = "$target_out_dir/${_crate_name}.rs"
    outputs = [ output ]
    args = bindgen_flags + rebase_path(sources) + [
             "-o",
             rebase_path(output),
             "--",
           ] + cflags
    args += [ "{{include_dirs}}" ]
  }
}
