# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

template("blueos_board") {
  # Formalize directory hierarchy.
  assert(get_path_info(get_label_info(":${target_name}", "dir"), "file") ==
         target_name)
  assert(defined(invoker.kernel_config))
  assert(defined(invoker.app_config))
  assert(defined(invoker.default))
  assert(defined(invoker.check_all))

  config("kernel_config") {
    # FIXME: Shall we limit board's visibility?
    forward_variables_from(invoker.kernel_config, "*")
  }

  config("app_config") {
    forward_variables_from(invoker.app_config, "*")
  }

  group("default") {
    deps = invoker.default
  }

  group("check_all") {
    testonly = true
    deps = invoker.check_all
  }

  group("run_metric_tests") {
    testonly = true
    deps = invoker.run_metric_tests
  }
}
