# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This file defines template for running cbindgen.

template("cbindgen") {
  assert(defined(invoker.args), "must set 'args' in $target_name")
  config_name = "${target_name}_config"
  config(config_name) {
    include_dirs = [ target_gen_dir ]
  }

  action(target_name) {
    forward_variables_from(invoker,
                           [
                             "deps",
                             "sources",
                           ])

    script = "//build/scripts/run_cbindgen.py"
    gen_output = "${target_gen_dir}/${target_name}.inc"
    depfile = "${gen_output}.d"
    args = [
             "-o",
             rebase_path(gen_output, root_build_dir),
             "--depfile",
             rebase_path(depfile, root_build_dir),
           ] + invoker.args
    outputs = [ gen_output ]
    public_configs = [ ":$config_name" ]
  }
}
