# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

template("run_clippy") {
  forward_variables_from(invoker, "*")
  not_needed("*")

  action(target_name) {
    invoker_deps = invoker.deps
    invoker_dep = invoker_deps[0]

    target_name = get_label_info(invoker_dep, "name")
    target_out_dir = get_label_info(invoker_dep, "target_out_dir")
    clippy_rspfile = "${target_out_dir}/${target_name}.clippy_rsp"

    script = "//build/scripts/run_clippy.py"
    inputs = [ clippy_rspfile ]
    outputs = [ "${target_out_dir}/${target_name}.stamp" ]

    args = [ rebase_path(clippy_rspfile) ]
  }
}
