# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

template("generate_linker") {
  action("${target_name}") {
    script = "//build/scripts/preprocess_linker_script.py"
    inputs = [
      "${root_build_dir}/autoconf.h",
      "${invoker.ref_linker_script}",
    ]
    args = [
      "--preprocesser",
      "${invoker.preprocesser}",
      "--input",
      rebase_path("${invoker.ref_linker_script}"),
      "--include_dir",
      rebase_path("${root_build_dir}"),
      "--output",
      rebase_path("${invoker.output}"),
    ]
    outputs = [ "${root_build_dir}/link.pre.ld" ]
    deps = [ "//kernel/kconfig:generate_c_header" ]
  }
}
