# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

template("generate_linker_script") {
  action("${target_name}") {
    script = "//build/scripts/preprocess_linker_script.py"
    inputs = [
      "${root_gen_dir}/autoconf.h",
      "${invoker.template}",
    ]
    args = [
      "--preprocesser",
      "${invoker.preprocesser}",
      "--input",
      rebase_path("${invoker.template}"),
      "--include_dir",
      rebase_path("${root_gen_dir}"),
      "--output",
      rebase_path("${invoker.output}"),
    ]
    outputs = [ "${invoker.output}" ]
    deps = [ "//kernel/kconfig:generate_c_header" ]
  }
}
